infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Describes the deployment 
  name: auth-depl # Name of deployment
spec:
  replicas: 1 # Create one pod
  selector: #  A selector for the deployment to apply to the pod that the deployment is describing
    matchLabels: # What pod the deployment is applied to
      app: auth
  template: # This is a pod template. It describes a pod that is launched
    metadata: # Describes the pod
      labels: # label for the pod that the deployment is deploying
        app: auth
    spec:
      containers:
      - name: auth
        image: ikechukwu1903/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv # Name of service
spec:
  type: ClusterIP # Type of service
  selector:
    app: auth # Selects all pods named auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
