infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Describes the deployment 
  name: expiration-redis-depl # Name of deployment
spec:
  replicas: 1 # Create one pod
  selector: #  A selector for the deployment to apply to the pod that the deployment is describing
    matchLabels: # What pod the deployment is applied to
      app: expiration-redis
  template: # This is a pod template. It describes a pod that is launched
    metadata: # Describes the pod
      labels: # label for the pod that the deployment is deploying
        app: expiration-redis
    spec:
      containers:
      - name: expiration-redis
        image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv # Name of service
spec:
  type: ClusterIP # Type of service
  selector:
    app: expiration-redis # Selects all pods named expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
