infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Describes the deployment 
  name: nats-depl # Name of deployment
spec:
  replicas: 1 # Create one pod
  selector: #  A selector for the deployment to apply to the pod that the deployment is describing
    matchLabels: # What pod the deployment is applied to
      app: nats
  template: # This is a pod template. It describes a pod that is launched
    metadata: # Describes the pod
      labels: # label for the pod that the deployment is deploying
        app: nats
    spec:
      containers:
      - name: nats
        image: nats-streaming:0.17.0
        args: [
          '-p', '4222',
          '-m', '8222',
          '-hbi', '5s',
          '-hbt', '5s',
          '-hbf', '2',
          '-SD',
          '-cid', 'ticketing'
        ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv # Name of service
spec:
  type: ClusterIP # Type of service
  selector:
    app: nats # Selects all pods named nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
