infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Describes the deployment
  name: orders-depl # Name of deployment
spec:
  replicas: 1 # Create one pod
  selector: #  A selector for the deployment to apply to the pod that the deployment is describing
    matchLabels: # What pod the deployment is applied to
      app: orders
  template: # This is a pod template. It describes a pod that is launched
    metadata: # Describes the pod
      labels: # label for the pod that the deployment is deploying
        app: orders
    spec:
      containers:
      - name: orders
        image: ikechukwu1903/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv # Name of service
spec:
  type: ClusterIP # Type of service
  selector:
    app: orders # Selects all pods named orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
