infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Describes the deployment 
  name: tickets-mongo-depl # Name of deployment
spec:
  replicas: 1 # Create one pod
  selector: #  A selector for the deployment to apply to the pod that the deployment is describing
    matchLabels: # What pod the deployment is applied to
      app: tickets-mongo
  template: # This is a pod template. It describes a pod that is launched
    metadata: # Describes the pod
      labels: # label for the pod that the deployment is deploying
        app: tickets-mongo
    spec:
      containers:
      - name: tickets-mongo
        image: mongo
        # ports:
        # - containerPort: 27017
          
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv # Name of service
spec:
  type: ClusterIP # Type of service
  selector:
    app: tickets-mongo # Selects all pods named tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
